fixed phone clipping

--- a/style.css
+++ b/style.css
@@ -25,6 +25,7 @@ body {
 
   background: rgb(2, 0, 36);
   background: linear-gradient(132deg, rgba(2, 0, 36, 1) 0%, rgba(12, 0, 31, 1) 16%, rgba(59, 0, 143, 1) 100%);
+  background-size: cover;
   color: rgb(255, 255, 255);
 }
 
